# focal_sum

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  report_clang_tidy.txt  report_clang_tidy2.txt  report_precommit.txt
.github/workflows/: linux.yml
CMakePresets/: CMakePresets.json  CMakePresets1.jsonjson  CMakePresets2.json
app_focal_mean/source/: main.cpp
app_focal_sum/source/: main.cpp
doc/: Doxyfile
doc/html/: README_8md.html  annotated.html  classes.html  data__set_8cpp.html  data__set_8cpp__incl.dot  data__set_8h.html  data__set_8h__dep__incl.dot  data__set_8h__incl.dot  data__set_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  focal__sum_8cpp.html  focal__sum_8cpp__incl.dot  focal__sum_8h.html  focal__sum_8h__dep__incl.dot  focal__sum_8h__incl.dot  focal__sum_8h_source.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot  md__home_saeb_focal_sum_project_test_GDAL_and_command_line_argument_20230525_focal_sum_src_README.html  md__home_saeb_focal_sum_project_test_GDAL_and_command_line_argument_20230606_focal_sum_rev2_git_src_README.html  menudata.js  namespacedataCal.html  namespacedata__set.html  namespacedc.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  pages.html  structdata__set_1_1GDALDatasetDeleter-members.html  (+4 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  search.css  searchdata.js  typedefs_0.js
doc/latex/: README_8md.tex  annotated.tex  data__set_8cpp.tex  data__set_8cpp.tex.tmp  data__set_8cpp__incl.dot  data__set_8h.tex  data__set_8h__dep__incl.dot  data__set_8h__incl.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex.tmp  dir_d44c64559bbebec7f509842c48db8b23.tex  doxygen.sty  files.tex  focal__sum_8cpp.tex  focal__sum_8cpp__incl.dot  focal__sum_8h.tex  focal__sum_8h__dep__incl.dot  focal__sum_8h__incl.dot  main_8cpp.tex  main_8cpp__incl.dot  md__home_saeb_focal_sum_project_test_GDAL_and_command_line_argument_20230525_focal_sum_src_README.tex  md__home_saeb_focal_sum_project_test_GDAL_and_command_line_argument_20230606_focal_sum_rev2_git_src_README.tex  namespacedataCal.tex  namespacedata__set.tex  namespacedc.tex  namespaces.tex  refman.tex  structdata__set_1_1GDALDatasetDeleter.tex  structdc_1_1GDALDatasetDeleter.tex  test_8cpp.tex
include/: data_set.h  focal_sum.h  focal_sum_gdal.h
include/dc/: focal_sum.hpp  io.hpp  raster.hpp
install/include/: focal_sum.h
lib_IO/include/dc/: io.hpp
lib_IO/source/: io.cpp
lib_focal_mean/: CMakeLists.txt
lib_focal_mean/include/dc/: focal_mean.hpp
lib_focal_mean/source/: focal_mean.cpp
lib_focal_sum/include/dc/: focal_sum.hpp
lib_focal_sum/source/: focal_sum.cpp
lib_focal_sum/test/: test_focal_sum.cpp
lib_neighborhood_node/: CMakeLists.txt
lib_neighborhood_node/include/dc/: neighborhood_node.hpp
lib_neighborhood_node/source/: neighborhood_node.cpp
lib_neighborhood_node/test/: test_neighborhood_node.cpp  test_neighborhood_node_google.cpp
lib_raster/include/dc/: raster.hpp
lib_raster/source/: raster.cpp
source/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  focal_sum.cpp  io.cpp  main.cpp  raster.cpp
source/IO/: CMakeLists.txt
source/focal_operation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
source/focal_operation/include/dc/: focal_mean.hpp  focal_min.hpp  focal_sum.hpp  neighborhood_node.hpp
source/focal_operation/source/: focal_mean.cpp  focal_min.cpp  focal_sum.cpp  main_mean.cpp  main_min.cpp  main_min_template.cpp  main_sum.cpp  neighborhood_node.cpp
source/focal_operation/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_focal_sum.cpp  test_neighborhood_node.cpp
source/io/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
source/io/include/dc/: io.hpp
source/io/source/: io.cpp
source/lib_mdspan/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mdspan.hpp
source/raster/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
source/raster/include/dc/: raster.hpp
source/raster/source/: raster.cpp
src/: CMakeLists.txt  data_set.cpp  focal_sum.cpp  focal_sum_gdal.cpp  main.cpp  test.cpp
